<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:colorPrimary"
    android:fitsSystemWindows="true"
    android:id="@+id/coordinator_layout"
    tools:ignore="Overdraw">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/toolbarLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginBottom="90dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:toolbarId="@+id/toolbar">

            <ImageView
                android:id="@+id/detailBackdrop"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:contentDescription="@string/poster"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"
                tools:srcCompat="@drawable/progress_image" />
            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:src="@drawable/image_front_shadow"
                android:contentDescription="@string/image_font_shadow" />

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/detailToolbar"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                app:layout_collapseMode="pin"/>


        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/detailScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:behavior_overlapTop="75dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/detailData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/materialCardView"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_margin="8dp"
                app:cardBackgroundColor="@color/colorCardView"
                app:strokeWidth="4dp"
                app:strokeColor="@color/color_on_secondary"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/materialCardView2"
                        android:layout_width="130dp"
                        android:layout_height="170dp"
                        android:layout_margin="8dp"
                        android:layout_marginStart="16dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:strokeColor="@color/color_secondary"
                        app:strokeWidth="4dp">

                        <ImageView
                            android:id="@+id/detailPoster"
                            android:layout_width="match_parent"
                            android:scaleType="centerCrop"
                            android:layout_height="match_parent"
                            android:contentDescription="@string/detail_image"
                            tools:srcCompat="@drawable/progress_image" />
                    </com.google.android.material.card.MaterialCardView>

                    <TextView
                        android:id="@+id/detailTitle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:text="@string/title"
                        android:lines="2"
                        android:minLines="1"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="@+id/materialCardView2"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toEndOf="@+id/materialCardView2"
                        app:layout_constraintTop_toTopOf="@+id/materialCardView2"
                        app:layout_constraintVertical_bias="0.0" />

                    <TextView
                        android:id="@+id/detailReleaseDate"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="8dp"
                        android:text="@string/release_date"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toEndOf="@+id/materialCardView2"
                        app:layout_constraintTop_toBottomOf="@+id/detailTitle"
                        app:layout_constraintVertical_bias="0.0" />

                    <TextView
                        android:id="@+id/detailGenre"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="8dp"
                        android:lines="2"
                        android:text="@string/genre"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:textStyle="italic"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toEndOf="@+id/materialCardView2"
                        app:layout_constraintTop_toBottomOf="@+id/detailReleaseDate"
                        app:layout_constraintVertical_bias="0.0" />

                    <RatingBar
                        android:id="@+id/detailRatingBar"
                        style="@style/Widget.AppCompat.RatingBar.Small"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:numStars="5"
                        android:stepSize="0.5"
                        app:layout_constraintStart_toEndOf="@+id/materialCardView2"
                        app:layout_constraintTop_toBottomOf="@+id/detailGenre" />

                    <TextView
                        android:id="@+id/detailRating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:background="@color/colorTint"
                        android:text="@string/text_rating"
                        android:textColor="@android:color/white"
                        android:textSize="12sp"
                        app:drawableStartCompat="@drawable/ic_star"
                        app:layout_constraintBottom_toBottomOf="@+id/detailRatingBar"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toEndOf="@+id/detailRatingBar"
                        app:layout_constraintTop_toTopOf="@+id/detailRatingBar" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>


            <TextView
                android:id="@+id/overview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/overview"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/materialCardView" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@+id/overview">

                <TextView
                    android:id="@+id/detailOverviewValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/lorem_ipsum"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/overview" />

                <include
                    android:id="@+id/movieVideosView"
                    layout="@layout/movie_videos" />

                <include
                    android:id="@+id/movieReviewView"
                    layout="@layout/movie_reviews"/>
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/detailAnimLoader"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center_horizontal|center_vertical"
        android:visibility="gone"
        android:elevation="4dp"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_fileName="anim_loader.json" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>